重构网关模块